--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -7,3 +7,15 @@
 html {
 	box-sizing: border-box;
 }
+
+body {
+	min-height: 100vh;
+	font-family: $font-default;
+	font-size: 16px;
+}
+
+.container {
+	margin: 0 auto;
+	width: 100%;
+	max-width: 1750px;
+}
