--- a/src/scss/_sprites.scss
+++ b/src/scss/_sprites.scss
@@ -1,4 +1,105 @@
-$sprites: ();
+$sprites: (
+	"ic_clock": (
+		normal: (
+			x: 635,
+			y: 714,
+			width: 116,
+			height: 116,
+			image: "sprites.png",
+			total_width: 1434,
+			total_height: 1313,
+		),
+		retina: (
+			x: 1270,
+			y: 1428,
+			width: 232,
+			height: 232,
+			image: "sprites@2x.png",
+			total_width: 2868,
+			total_height: 2626,
+		),
+	),
+	"ic_drop": (
+		normal: (
+			x: 532,
+			y: 714,
+			width: 101,
+			height: 142,
+			image: "sprites.png",
+			total_width: 1434,
+			total_height: 1313,
+		),
+		retina: (
+			x: 1064,
+			y: 1428,
+			width: 202,
+			height: 284,
+			image: "sprites@2x.png",
+			total_width: 2868,
+			total_height: 2626,
+		),
+	),
+	"img_good": (
+		normal: (
+			x: 0,
+			y: 0,
+			width: 1434,
+			height: 712,
+			image: "sprites.png",
+			total_width: 1434,
+			total_height: 1313,
+		),
+		retina: (
+			x: 0,
+			y: 0,
+			width: 2868,
+			height: 1424,
+			image: "sprites@2x.png",
+			total_width: 2868,
+			total_height: 2626,
+		),
+	),
+	"img_plants_1": (
+		normal: (
+			x: 205,
+			y: 714,
+			width: 325,
+			height: 286,
+			image: "sprites.png",
+			total_width: 1434,
+			total_height: 1313,
+		),
+		retina: (
+			x: 410,
+			y: 1428,
+			width: 650,
+			height: 572,
+			image: "sprites@2x.png",
+			total_width: 2868,
+			total_height: 2626,
+		),
+	),
+	"img_plants_2": (
+		normal: (
+			x: 0,
+			y: 714,
+			width: 203,
+			height: 599,
+			image: "sprites.png",
+			total_width: 1434,
+			total_height: 1313,
+		),
+		retina: (
+			x: 0,
+			y: 1428,
+			width: 406,
+			height: 1198,
+			image: "sprites@2x.png",
+			total_width: 2868,
+			total_height: 2626,
+		),
+	),
+);
 
 @each $name in map-keys($sprites) {
 	.sprite-#{$name} {
