Блок с изображением в промо, добавил корретные шрифты, правка хедера

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,4 +8,4 @@ $color-energy-yellow: #f7d14c;
 
 // FONTS
 
-$font-default: "Helvetica Neue", -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue", "Arial", sans-serif;
+$font-default: "HelveticaNeueCyr", -apple-system, "BlinkMacSystemFont", "Segoe UI", "Roboto", "Helvetica Neue", "Arial", sans-serif;
