--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -14,6 +14,11 @@ body {
   font-size: 16px;
 }
 
+.wrapper {
+  overflow: hidden;
+  min-height: 100vh;
+}
+
 .container {
   margin: 0 auto;
   width: 100%;
