--- a/src/scss/parts/_promo.scss
+++ b/src/scss/parts/_promo.scss
@@ -31,6 +31,8 @@
   }
 
   &__footer {
+    position: relative;
+    z-index: 1;
     padding-top: 6px;
     padding-right: 230px;
     padding-left: 8px;
@@ -41,6 +43,59 @@
     strong {
       font-family: "HelveticaNeueCyr";
       font-weight: 900;
+    }
+  }
+}
+
+.promo-description {
+  position: relative;
+  z-index: 1;
+  padding-top: 155px;
+  padding-left: 85px;
+
+  &__title {
+    margin-bottom: 5px;
+    padding-left: 5px;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 54px;
+    text-transform: lowercase;
+  }
+
+  &__subtitle {
+    margin: 0;
+    padding-right: 25%;
+    padding-left: 5px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+  }
+
+  &__list {
+    list-style: none;
+    margin: 0;
+    padding-top: 90px;
+    padding-right: 75px;
+    padding-left: 0;
+  }
+
+  &__list-item {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+
+    &:not(:last-child) {
+      margin-bottom: 70px;
+    }
+
+    span {
+      margin-top: 15px;
+      margin-left: 30px;
+      width: 360px;
+      font-weight: 700;
+      font-size: 30px;
+      line-height: 38px;
     }
   }
 }
