--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -14,6 +14,15 @@ body {
   font-size: 16px;
 }
 
+img {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+img[data-src] {
+  opacity: 0;
+}
+
 .wrapper {
   overflow: hidden;
   min-height: 100vh;
