--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -4,6 +4,7 @@
   font-family: "HelveticaNeueCyr";
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -11,6 +12,7 @@
   font-family: "HelveticaNeueCyr";
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -18,6 +20,7 @@
   font-family: "HelveticaNeueCyr";
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -25,6 +28,7 @@
   font-family: "HelveticaNeueCyr";
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -32,4 +36,5 @@
   font-family: "HelveticaNeueCyr";
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
